Install router and support Isomorphic rendering

--- a/views/500.ejs
+++ b/views/500.ejs
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie-edge">
-		<title>Undo demo</title>
+		<title>An unexpected error ocurred</title>
 		<meta name="description" content="Undo demo">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
-		<div id="root"></div>
-		<script src="/app.js" type="text/javascript"></script>
+		<h1>An unexpected error ocurred:</h1>
+		<div id="error"><%- error_message %></div>
 	</body>
 </html>
